# Syndat

./: .gitignore  Development.md  Final_Exec-Copy1.ipynb  Final_Exec.ipynb  Finalized.py  LICENSE  README.md  Untitled.ipynb  Untitled1.ipynb  create.py  environment.yml  examples.py  examples_exp.py  exp.ipy  main.py  setup.cfg  setup.py
docs/: conf.py  genindex.html  index.html  index.rst  modules.html  modules.rst  py-modindex.html  sample_resparm.html  sample_resparm.rst  search.html  syndat.rst
examples/: Final_Exec.ipynb  Finalized.py  GenerateData_UserExample.ipynb  GenerateData_UserExample.py  GenerateData_UserExample_SAMMY.ipynb  Jp_3.0.csv  Jp_4.0.csv  UpdatedLevelGeneration.ipynb  chi2_GoF_test_GvP.py  create.ipynb  create.py  dev.py  example_execution.ipynb  exec.ipynb  expanded_exec.ipynb  generate_xs_example.ipynb  generated_xs_example_expanded.ipynb  make_constants.ipynb  produce-trans-walton_JBSol.ipynb  verify_against_JBrown.ipynb
source/: conf.py  index.rst
src/: sample_levels.py  sample_widths.py
syndat/: MMDA.py  PS_functions.py  __init__.py  exp_effects 2.py  exp_effects.py  experiment.py  generation.py  json_reader.py  params.json  particle_pair.py  plot.py  reduction.py  sammy_interface 2.py  sammy_interface.py  sample_levels.py  sample_widths.py  scattering_theory.py  spin_groups.py
synthetic_data/: SAMMY.LST  SAMMY_high.LST  SAMNDF.INP  SAMNDF.PAR  estruct  sammy.par
workspace/: cole_NN_data.ipynb  create.ipynb  create_data_cole_NN.py  first_moments.csv  general_workspace.ipynb  interrogate_noise_distribution.ipynb  missing_res_.csv  (+7 more)
(+93 files in other folders)
