[metadata]
name = nuc_syndat
version = 0.0.1
author = Noah Walton
author_email = nwalton1@vols.utk.edu
description = This package creates synthetic neutron cross section data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/Naww137/nuc_syndat
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src